fix footer on mobile

--- a/components/shoes/styles.css
+++ b/components/shoes/styles.css
@@ -8,12 +8,12 @@ men > div > div.z-depth-4 {
 }
 .row > .col.s2.m2 > .card > .card-content > p {
   font-family: 'myFirstFont';
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .card .card-image .card-title {
   font-family: 'myFirstFont';
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .waves-effect {
